Add flow to create and invite users (#5)
